--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -35,7 +35,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="10dp"
                 android:layout_marginStart="10dp"
                 android:orientation="vertical">
@@ -69,7 +69,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:orientation="vertical">
 
@@ -127,7 +127,7 @@
                         android:textSize="20sp"
                         android:textStyle="bold" />
 
-                    <HorizontalScrollView
+                    <ScrollView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
@@ -144,7 +144,7 @@
                             android:showDividers="middle"
                              />
 
-                    </HorizontalScrollView>
+                    </ScrollView>
                 </LinearLayout>
             </android.support.v7.widget.CardView>
 
@@ -169,17 +169,16 @@
                         android:textSize="20sp"
                         android:textStyle="bold" />
 
-<ScrollView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-                    <com.linearlistview.LinearListView
-                        android:id="@+id/detail_reviews"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:divider="?android:dividerHorizontal"
-                        android:showDividers="middle" />
-</ScrollView>
+
+                        <com.linearlistview.LinearListView
+                            android:id="@+id/detail_reviews"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:divider="?android:dividerVertical"
+                            android:orientation="horizontal"
+                            android:showDividers="middle"
+                             />
+
                 </LinearLayout>
             </android.support.v7.widget.CardView>
         </LinearLayout>
